--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,36 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="style_inicio.css">
+    <link rel="stylesheet" href="../CSS/style_inicio.css">
+    <script src="../SCRIPT/script_f.js"></script>
 </head>
 <body>
     <header>
         <div id="header"> 
 
-            <img class="header_element" id="logo" src="images/logo_dulce_refugio.png" alt="logo de la funcacion">
-            <a class="header_element" href="campanas.html" target="_blank">campañas</a>
-            <a class="header_element" href="quienes_somos.html"target="_blank">¿Quiénes somos?</a>
-            <a class="header_element" href="como_funciona.html"target="_blank">¿Cómo funciona?</a>
-            <a class="header_element" href="contacto.html"target="_blank">Contáctenos</a>
+            <img class="header_element" id="logo" src="../images/logo_dulce_refugio.png" alt="logo de la funcacion">
+            <a class="header_element" href="encabezado/campanas.html" target="_blank">campañas</a>
+            <a class="header_element" href="encabezado/quienes_somos.html"target="_blank">¿Quiénes somos?</a>
+            <a class="header_element" href="encabezado/como_funciona.html"target="_blank">¿Cómo funciona?</a>
+            <a class="header_element" href="encabezado/contacto.html"target="_blank">Contáctenos</a>
             <button class="header_element">Iniciar sesion</button>
         </div>
     </header>
    <div class="carrusel">
        <div class="grande" >
-           <img src="#" alt="imagen 1" class="img">
-           <img src="#" alt="imagen 2" class="img">
-           <img src="#" alt="imagen 3" class="img">
-           <img src="#" alt="imagen 4" class="img">
+           <img src="../images/imagen_title1.jpeg"alt="imagen 1" class="img">
+           <img src="../images/imagen_title2.jpeg" alt="imagen 2" class="img">
+           <img src="../images/imagen_title3.jpeg" alt="imagen 3" class="img">
+           <img src="../images/imagen_title4.jpeg" alt="imagen 4" class="img">
        </div>
        <ul class="puntos">
-           <li class="puntos"></li>
-           <li class="puntos"></li>
-           <li class="puntos"></li>
-           <li class="puntos"></li>
+           <li class="punto activo" ></li>
+           <li class="punto"></li>
+           <li class="punto"></li>
+           <li class="punto"></li>
        </ul>    
-   </div>
-  
-    
+   </div>   
     
 </body>
 </html>
