--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="../CSS/style_inicio.css">
-    <script src="../SCRIPT/script_f.js"></script>
 </head>
 <body>
     <header>
@@ -18,20 +17,75 @@
             <button class="header_element">Iniciar sesion</button>
         </div>
     </header>
-   <div class="carrusel">
-       <div class="grande" >
-           <img src="../images/imagen_title1.jpeg"alt="imagen 1" class="img">
-           <img src="../images/imagen_title2.jpeg" alt="imagen 2" class="img">
-           <img src="../images/imagen_title3.jpeg" alt="imagen 3" class="img">
-           <img src="../images/imagen_title4.jpeg" alt="imagen 4" class="img">
-       </div>
-       <ul class="puntos">
-           <li class="punto activo" ></li>
-           <li class="punto"></li>
-           <li class="punto"></li>
-           <li class="punto"></li>
-       </ul>    
-   </div>   
-    
+    <!-- <div class="carrusel">
+        <div class="grande" >
+            <img src="../images/imagen_title1.jpeg"alt="imagen 1" class="img">
+            <img src="../images/imagen_title2.jpeg" alt="imagen 2" class="img">
+            <img src="../images/imagen_title3.jpeg" alt="imagen 3" class="img">
+            <img src="../images/imagen_title4.jpeg" alt="imagen 4" class="img">
+        </div>
+        <ul class="puntos">
+            <li class="punto activo" ></li>
+            <li class="punto"></li>
+            <li class="punto"></li>
+            <li class="punto"></li>
+        </ul>    
+    </div> -->
+
+    <!-- <div class="carousel-container">
+        <div class="carousel">
+            <div class="item main">
+                <img src="../images/imagen_title1.jpeg" alt="mountain" />
+                <div class="caption">Entregas de alimentos</div>
+            </div>
+            <div class="item">
+                <img src="../images/imagen_title2.jpeg" alt="beach" />
+                <div class="caption">Integrantes de la fundación</div>
+            </div>
+            <div class="item">
+                <img src="../images/imagen_title3.jpeg" alt="cityscape" />
+                <div class="caption">Actividad social</div>
+            </div>
+        </div>
+        <div class="navigation">
+            <div class="prev nav-btn"> < </div>
+            <div class="next nav-btn"> > </div>
+        </div>
+    </div> -->
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
+
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides fade">
+            <!-- <div class="numbertext">1 / 3</div> -->
+            <img src="../images/imagen_title1.jpeg" style="width:100%">
+            <div class="text">Caption Text</div>
+        </div>
+
+        <div class="mySlides fade">
+            <!-- <div class="numbertext">2 / 3</div> -->
+            <img src="../images/imagen_title2.jpeg" style="width:100%">
+            <div class="text">Caption Two</div>
+        </div>
+
+        <div class="mySlides fade">
+            <!-- <div class="numbertext">3 / 3</div> -->
+            <img src="../images/imagen_title3.jpeg" style="width:100%">
+            <div class="text">Caption Three</div>
+        </div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+        <br>
+
+        <!-- The dots/circles -->
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+    <script src="../SCRIPT/script_f.js"></script>
 </body>
 </html>
