centrado mejorado de front-end

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,57 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+    <head>
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="../CSS/style_inicio.css">
-</head>
-<body>
-    <header>
-        <div id="header"> 
-
-            <img class="header_element" id="logo" src="../images/logo_dulce_refugio.png" alt="logo de la funcacion">
-            <a class="header_element" href="encabezado/campanas.html" target="_blank">campañas</a>
-            <a class="header_element" href="encabezado/quienes_somos.html"target="_blank">¿Quiénes somos?</a>
-            <a class="header_element" href="encabezado/como_funciona.html"target="_blank">¿Cómo funciona?</a>
-            <a class="header_element" href="encabezado/contacto.html"target="_blank">Contáctenos</a>
-            <button class="header_element">Iniciar sesion</button>
-        </div>
-    </header>
-    <!-- <div class="carrusel">
-        <div class="grande" >
-            <img src="../images/imagen_title1.jpeg"alt="imagen 1" class="img">
-            <img src="../images/imagen_title2.jpeg" alt="imagen 2" class="img">
-            <img src="../images/imagen_title3.jpeg" alt="imagen 3" class="img">
-            <img src="../images/imagen_title4.jpeg" alt="imagen 4" class="img">
-        </div>
-        <ul class="puntos">
-            <li class="punto activo" ></li>
-            <li class="punto"></li>
-            <li class="punto"></li>
-            <li class="punto"></li>
-        </ul>    
-    </div> -->
-
-    <!-- <div class="carousel-container">
-        <div class="carousel">
-            <div class="item main">
-                <img src="../images/imagen_title1.jpeg" alt="mountain" />
-                <div class="caption">Entregas de alimentos</div>
+    </head>
+    <body>
+        <header>
+            <div id="header"> 
+                <img class="header_element" id="logo" src="../images/logo_dulce_refugio.png" alt="logo de la funcacion">
+                <a class="header_element" href="encabezado/campanas.html" target="_blank">campañas</a>
+                <a class="header_element" href="encabezado/quienes_somos.html"target="_blank">¿Quiénes somos?</a>
+                <a class="header_element" href="encabezado/como_funciona.html"target="_blank">¿Cómo funciona?</a>
+                <a class="header_element" href="encabezado/contacto.html"target="_blank">Contáctenos</a>
+                <button class="header_element">Iniciar sesion</button>
             </div>
-            <div class="item">
-                <img src="../images/imagen_title2.jpeg" alt="beach" />
-                <div class="caption">Integrantes de la fundación</div>
-            </div>
-            <div class="item">
-                <img src="../images/imagen_title3.jpeg" alt="cityscape" />
-                <div class="caption">Actividad social</div>
-            </div>
-        </div>
-        <div class="navigation">
-            <div class="prev nav-btn"> < </div>
-            <div class="next nav-btn"> > </div>
-        </div>
-    </div> -->
+        </header>
+    
     <!-- Slideshow container -->
     <div class="slideshow-container">
 
@@ -59,19 +24,19 @@
         <div class="mySlides fade">
             <!-- <div class="numbertext">1 / 3</div> -->
             <img src="../images/imagen_title1.jpeg" style="width:100%">
-            <div class="text">Caption Text</div>
+            <div class="text">Entrega de alimentos</div>
         </div>
 
         <div class="mySlides fade">
             <!-- <div class="numbertext">2 / 3</div> -->
             <img src="../images/imagen_title2.jpeg" style="width:100%">
-            <div class="text">Caption Two</div>
+            <div class="text">Integrantes de la fundación</div>
         </div>
 
         <div class="mySlides fade">
             <!-- <div class="numbertext">3 / 3</div> -->
             <img src="../images/imagen_title3.jpeg" style="width:100%">
-            <div class="text">Caption Three</div>
+            <div class="text">Apoyo social</div>
         </div>
 
         <!-- Next and previous buttons -->
@@ -86,6 +51,48 @@
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
     </div>
-    <script src="../SCRIPT/script_f.js"></script>
-</body>
+
+    <div class="all_sections">
+
+        <div class="section">
+
+            <p>Contamos con un equipo dispuesto ayudar las personas con situacion de pobreza en la Parroquia El Carmen y cualquier sitio del municipio Simon Bolivar. </p>
+            <img src="../images/photo_section1.jpeg" alt="integrantes" class="section_img">
+        </div>
+
+        <div class="verse">   
+
+            <h4>Juan 13:34</h4> 
+            <p> Un mandamiento nuevo os doy: Que os améis unos a otros; como yo os he amado, que también os améis los unos a los otros.</p>
+        </div>
+
+        <div class="verse">
+
+           <h4>Mateo 20:28</h4>
+            <p>Así como el Hijo del Hombre no vino para ser servido, sino para servir y para dar su vida en rescate por muchos.</p>
+        </div>
+
+        <div class="section">
+
+            <p>La educación es el arma más potente que puedes usar para cambiar el mundo (Nelson Mandela).</p>
+            <p>Realizamos charlas en instituciones educativas sobre temas como la educacion sexual, el bulling, No a las Drogas, enseñanzas cristianas entre otros.</p>
+            <p>Hacemos donaciones de utiles escolares ayudando a mas de 60 niños y adolecentes por institucion que no cuentan con el material necesario para estudiar.</p>
+            <img src="../images/photo_section2.jpeg" alt="educacion" class="section_img">
+         </div>
+
+        <div class="section">
+            <p>Recibimos ayuda de de los integrantes de las iglesias Centro Familiar Cristiano Peniel en lecheria e Iglesia Bautista Memorial ubicada en boyaca V. </p>
+            <img src="../images/imagen_title4.jpeg" alt="" class="section_img">
+        </div>
+
+        <div class="verse">
+            <h4>Gálatas 5:13-14</h4>
+                <p>13 Porque vosotros, hermanos, a libertad habéis sido llamados; solamente que no uséis la libertad como ocasión para la carne, sino servíos por amor los unos a los otros.</p>
+                
+                <p>14 Porque toda la ley en esta sola palabra se cumple: Amarás a tu prójimo como a ti mismo.</p>
+        </div>
+
+    </div>
+        <script src="../SCRIPT/script_f.js"></script>
+    </body>
 </html>
